--- a/_data/tools/juridisch_rechtspraak.yaml
+++ b/_data/tools/juridisch_rechtspraak.yaml
@@ -1,5 +1,5 @@
 - title: Rechtspraak Hong Kong
-  description: Legal Ref
+  description: Rechterlijke uitspraken in Hong Kong
   url: http://legalref.judiciary.hk/lrs/common/ju/judgment.jsp
   target: _blank
   type: website
