--- a/_data/sidebars/tools_sidebar.yml
+++ b/_data/sidebars/tools_sidebar.yml
@@ -24,6 +24,11 @@ entries:
       output: web, pdf
       type: homepage
 
+    - title: BTW
+      url: /bedrijf-btw.html
+      output: web, pdf
+      type: homepage
+
   - title: Auto
     output: web, pdf
     folderitems:
