--- a/_data/tools/zoekmachines.yaml
+++ b/_data/tools/zoekmachines.yaml
@@ -11,3 +11,9 @@
   target: _blank
   type: website
   region: Wereld
+
+- title: Millionshort
+  description: Voorbij het voor de hand liggende resultaat.
+  url: https://millionshort.com/
+  type: website
+  region: Wereld
