--- a/_data/tools/bedrijf_verrijkte_gegevens.yaml
+++ b/_data/tools/bedrijf_verrijkte_gegevens.yaml
@@ -1,6 +1,6 @@
 - title: Company Info
   description: Eigenaar, algemeen.
-  url: https://companyinfo.nl
+  url: https://companyinfo.nl/freemium
   target: _blank
   type: website
   region: Nederland
