update tools en info

--- a/_data/sidebars/tools_sidebar.yml
+++ b/_data/sidebars/tools_sidebar.yml
@@ -121,3 +121,12 @@ entries:
       url: /website-technologie.html
       output: web, pdf
       type: homepage
+
+  - title: Social
+    output: web, pdf
+    folderitems:
+
+    - title: Facebook
+      url: /social-facebook.html
+      output: web, pdf
+      type: homepage
