--- a/_data/tools/bedrijf_verrijkte_gegevens.yaml
+++ b/_data/tools/bedrijf_verrijkte_gegevens.yaml
@@ -1,5 +1,5 @@
 - title: Company Info
-  description: Eigenaar, algemeen.
+  description: Alleen actieve bedrijven, Eigenaar, algemeen.
   url: https://companyinfo.nl/freemium
   target: _blank
   type: website
